--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,10 @@ android {
     }
 }
 
+ext {
+    parseVersion = "1.17.3"
+}
+
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
@@ -36,4 +40,10 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation "com.parse:parse-android:$parseVersion"
+
+    // Add for push notification support -- add FCM or GCM but not both.
+    implementation "com.parse:parse-fcm-android:$parseVersion" // migrate to FCM
+    // implementation "com.parse:parse-gcm-android:$parseVersion" // deprecated GCM support
+
 }
