--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
+        maven { url "https://jitpack.io" }
         google()
         jcenter()
     }
+
+
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.1"
 
